<resources>
    <string name="app_name">BrainGame</string>
    <string name="main_login">LOGIN WITH EMAIL</string>
    <string name="main_signup">REGISTER WITH EMAIL</string>
    <string name="login">LOGIN</string>
    <string name="login_back">BACK</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="register_password">Enter your password</string>
    <string name="register_confirm_password">Re-enter your password</string>
    <string name="register_button">REGISTER</string>
    <string name="register_back_button">BACK</string>
    <string name="register_name">Enter your name</string>
    <string name="register_email">Enter your e-mail</string>
    <string name="home_signout_button">LOGOUT</string>
    <string name="home_email">User e-mail</string>
    <string name="home_uid">User UID</string>
    <string name="home_home">Home</string>
    <string name="home_leaderboard">Leaderboard</string>
    <string name="home_howto">How to play</string>
    <string name="home_logout">Logout</string>
    <string name="home_welcome">Welcome!</string>
    <string name="home_profile">Profile</string>
    <string name="home_score">Your score:</string>
    <string name="profile_username">Username</string>
    <string name="profile_button">SAVE CHANGES</string>
    <string name="profile_username_error">Please enter your username</string>
    <string name="register_enter_name">Please Enter Name</string>
    <string name="register_enter_email">Please Enter Email Address</string>
    <string name="register_enter_password">Please Enter Password</string>
    <string name="register_re_enter_password">Please Re-Enter Password</string>
    <string name="register_password_not_match">Passwords are not match</string>
    <string name="register_auth_fail">Authentication Failed, please try again</string>
    <string name="register_successful">Account has been created successfully!</string>
    <string name="login_enter_email">Please Enter Email Address</string>
    <string name="login_enter_password">Please Enter Password</string>
    <string name="login_auth_fail">Authentication failed</string>
    <string name="login_successful">Login Successfully!</string>
    <string name="home_logout_message">Logout Successfully!</string>
    <string name="profile_crop_not_support">Sorry, your device does not support cropping</string>
    <string name="profile_pic_upload_success">Profile was updated successfully!</string>
    <string name="home_level">Select Level</string>
    <string name="home_easy">Easy</string>
    <string name="home_normal">Normal</string>
    <string name="home_hard">Hard</string>
    <string name="home_dialog_title">Game Start</string>
    <string name="home_dialog_message">The game cannot be cancelled until the end</string>
    <string name="home_dialog_yes">START</string>
    <string name="home_dialog_no">CANCEL</string>
    <string name="home_dialog_logout_title">Logout</string>
    <string name="home_dialog_logout_message">Are you sure to logout?</string>
    <string name="home_dialog_logout_yes">YES</string>
    <string name="home_dialog_logout_no">NO</string>
    <string name="leaderboard_name">Name</string>
    <string name="leaderboard_score">Score</string>
    <string name="game_header_question">How many blocks are there?</string>
    <string name="game_starting">Game is starting in...</string>
    <string name="game_block_text">Block(s)</string>
    <string name="game_time_left">Time left</string>
    <string name="game_correct">Correct!</string>
    <string name="game_wrong">Wrong!</string>
    <string name="game_dialog_correct_message">You receive</string>
    <string name="game_dialog_correct_message_unit">point(s)</string>
    <string name="game_dialog_score_message">The correct answer is</string>
    <string name="game_dialog_result">Your total score is</string>
    <string name="game_finish">FINISH</string>
    <string name="game_over">Game Over</string>
    <string name="game_continue">NEXT QUESTION</string>
    <string name="game_retry">TRY AGAIN</string>
    <string name="game_terminate">BACK TO HOME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logoImage" />
    <string name="howto1">1) Click button to select mode that you want to play</string>
    <string name="howto2">2) Select START to start a game or CANCLE to exit to the level selection</string>
    <string name="howto" />
    <string name="howto3">3) Tab on a circle button based on the number of blocks,  then the number will show on bottom-left of the screen. Moreover, the remaining times will shows at bottom-right</string>
    <string name="howto4">4) After time out, the pop-up will shows your score and you can change the question by clicking NEXT QUSETION</string>
    <string name="howto5">5) After complete all questions, you can click FINISH to see the total scores</string>
    <string name="howto6">6) The pop-up will show total scores. You can click to BACK TO HOME to exit or TRY AGAIN to restart this level</string>
</resources>
