<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0F7FA"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/arvo"
        android:gravity="center_horizontal"
        android:text="@string/home_level"
        android:textColor="#01579B"
        android:textSize="35dp" />

    <Button
        android:id="@+id/homeEasy"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="-70dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/arvo"
        android:text="@string/home_easy"
        android:textColor="#01579B"
        android:textStyle="bold" />

    <Button
        android:id="@+id/homeNormal"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/arvo"
        android:text="@string/home_normal"
        android:textColor="#01579B"
        android:textStyle="bold" />

    <Button
        android:id="@+id/homeHard"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/arvo"
        android:text="@string/home_hard"
        android:textColor="#01579B"
        android:textStyle="bold" />

</FrameLayout>