<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowtoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:contentDescription="@string/howto"
            android:src="@drawable/howto1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/howto"
            android:fontFamily="@font/arvo"
            android:text="@string/howto1"
            android:textAlignment="center"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/howto"
            android:src="@drawable/howto2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/arvo"
            android:text="@string/howto2"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/howto"
            android:src="@drawable/howto3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/arvo"
            android:text="@string/howto3"
            android:textAlignment="center"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/howto"
            android:src="@drawable/howto5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/arvo"
            android:text="@string/howto4"
            android:textAlignment="center"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/howto"
            android:src="@drawable/howto6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/arvo"
            android:text="@string/howto5"
            android:textAlignment="center"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/howto"
            android:src="@drawable/howto7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/arvo"
            android:text="@string/howto6"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>