<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="none|textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/loginPassword"
        app:layout_constraintStart_toStartOf="@+id/loginPassword" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="none|textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>