<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/regisProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/regisEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/blank_profile" />

    <EditText
        android:id="@+id/regisEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="none|textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/regisPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/regisPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/regisConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/regisEmail" />

    <EditText
        android:id="@+id/regisConfirmPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/register_confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/regisBtn"
        app:layout_constraintStart_toStartOf="@+id/regisPassword" />

    <Button
        android:id="@+id/regisBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>