<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/homeSignoutBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/home_signout_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/homeTextView1"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/home_email"
        android:textAlignment="center"
        android:textColor="#304FFE"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/homeEmail"
        app:layout_constraintStart_toStartOf="@+id/homeEmail" />

    <TextView
        android:id="@+id/homeEmail"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/homeTextView2"
        app:layout_constraintStart_toStartOf="@+id/homeTextView2" />

    <TextView
        android:id="@+id/homeTextView2"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/home_uid"
        android:textAlignment="center"
        android:textColor="#2962FF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/homeUID"
        app:layout_constraintStart_toStartOf="@+id/homeUID" />

    <TextView
        android:id="@+id/homeUID"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginBottom="200dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/homeSignoutBtn"
        app:layout_constraintStart_toStartOf="@+id/homeSignoutBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>