<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EasyModeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/game_starting"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginBottom="120dp"/>
    <TextView
        android:id="@+id/gameEasyStartShowTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="0"
        android:textSize="100dp"
        android:textAlignment="center"
        android:layout_marginTop="0dp"/>

    <LinearLayout
        android:id="@+id/gameEasyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/game_header_question"
            android:textSize="30dp"
            android:id="@+id/gameEasyHeaderQuestion"/>

        <ImageView
            android:layout_width="350dp"
            android:layout_height="500dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/gameEasyImageView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gameEasyBlockText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_block_text"
                    android:layout_gravity="center_horizontal"
                    android:textSize="30dp"/>

                <TextView
                    android:id="@+id/gameEasyNumBlock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="30dp"/>
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/gameEasyButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gameEasyTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_time_left"
                    android:layout_gravity="center_horizontal"
                    android:textSize="30dp"/>

                <TextView
                    android:id="@+id/gameEasyShowTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="30dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>